# cmake_hello

./: CMakeLists.txt  main.c  readme.md
drv/: drv_sample.c
inc/: main.h
src/: main.c
